--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -84,7 +84,7 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>favicon_mOB_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Properties\favicon_mOB_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -124,10 +124,41 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations">
+      <HintPath>C:\Users\Rick\.nuget\packages\jetbrains.annotations\2018.3.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
+    <Reference Include="LinqFasterParallelSIMD">
+      <HintPath>C:\Users\Rick\.nuget\packages\linqfaster.simd.parallel\1.0.1\lib\net461\LinqFasterParallelSIMD.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Rick\.nuget\packages\newtonsoft.json\12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject">
+      <HintPath>C:\Users\Rick\.nuget\packages\ninject\3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>C:\Users\Rick\.nuget\packages\nlog\4.5.11\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog.Windows.Forms">
+      <HintPath>C:\Users\Rick\.nuget\packages\nlog.windows.forms\4.2.3\lib\net35\NLog.Windows.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="RandomNameGeneratorLibrary">
+      <HintPath>C:\Users\Rick\.nuget\packages\randomnamegeneratorlibrary\1.2.2\lib\net40\RandomNameGeneratorLibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="Rationals">
+      <HintPath>C:\Users\Rick\.nuget\packages\rationals\1.3.3\lib\net47\Rationals.dll</HintPath>
+    </Reference>
+    <Reference Include="ReactiveUI">
+      <HintPath>C:\Users\Rick\.nuget\packages\reactiveui\9.11.3\lib\net461\ReactiveUI.dll</HintPath>
+    </Reference>
+    <Reference Include="ReactiveUI.Fody.Helpers">
+      <HintPath>C:\Users\Rick\.nuget\packages\reactiveui.fody\9.11.3\lib\net461\ReactiveUI.Fody.Helpers.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
@@ -135,6 +166,7 @@
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
@@ -142,8 +174,14 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Speech" />
+    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.6.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Users\Rick\.nuget\packages\system.threading.tasks.dataflow\4.9.0\lib\netstandard2.0\System.Threading.Tasks.Dataflow.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
@@ -151,14 +189,22 @@
     <Compile Include="Collections\ExperimentalAttribute.cs" />
     <Compile Include="Collections\Positionial.cs" />
     <Compile Include="Collections\Queues\PriorityQueue.cs" />
-    <Compile Include="Collections\PriorityTime.cs" />
     <Compile Include="Collections\Extensions\Shufflings.cs" />
     <Compile Include="Collections\StringTable.cs" />
+    <Compile Include="Database\MMF\Class1.cs" />
+    <Compile Include="Database\Text.cs" />
+    <Compile Include="Extensions\DisposableBase.cs" />
+    <Compile Include="Extensions\JunctionPoint.cs" />
+    <Compile Include="Extensions\RegistryServer.cs" />
     <Compile Include="Financial\Containers\Shopping\ItemCategory.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxableShoppingItem.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxTable.cs" />
+    <Compile Include="Internet\InternetExtensions.cs" />
     <Compile Include="Logging\Error.cs" />
+    <Compile Include="Maths\Numbers\BigDecimal.cs" />
+    <Compile Include="Maths\Numbers\BiggerRational.cs" />
     <Compile Include="Maths\Numbers\PairOfDoubles.cs" />
+    <Compile Include="Measurement\Currency\USD\SimpleWallet.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileAttributeData.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileWatchingEvents.cs" />
     <Compile Include="OperatingSystem\FileSystem\FindEveryDocument.cs" />
@@ -360,6 +406,8 @@
     <Compile Include="Security\PronounceablePasswordCreator.cs" />
     <Compile Include="Threading\CPU.cs" />
     <Compile Include="Threading\EasierSemaphore.cs" />
+    <Compile Include="Threading\GCNotification.cs" />
+    <Compile Include="Threading\Heap.cs" />
     <Compile Include="Threading\Idler.cs" />
     <Compile Include="Threading\ReaderWriterFromMicrosoft.cs" />
     <Compile Include="Threading\Job.cs" />
@@ -841,9 +889,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Measurement\Currency\USD\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Controls\QuestionBox.resx">
       <DependentUpon>QuestionBox.cs</DependentUpon>
@@ -931,7 +977,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon_mOB_icon.ico" />
+    <Content Include="Properties\favicon_mOB_icon.ico" />
+    <Content Include="Properties\Libranian.ico" />
+    <Content Include="Misc\brain.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
