--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -124,50 +124,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Esent.Collections">
-      <HintPath>C:\Users\Rick\.nuget\packages\microsoft.database.collections.generic\1.9.4\lib\net40\Esent.Collections.dll</HintPath>
-    </Reference>
-    <Reference Include="Esent.Interop">
-      <HintPath>C:\Users\Rick\.nuget\packages\managedesent\1.9.4\lib\net40\Esent.Interop.dll</HintPath>
-    </Reference>
-    <Reference Include="Esent.Isam">
-      <HintPath>C:\Users\Rick\.nuget\packages\microsoft.database.isam\1.9.4\lib\net40\Esent.Isam.dll</HintPath>
-    </Reference>
-    <Reference Include="JetBrains.Annotations">
-      <HintPath>C:\Users\Rick\.nuget\packages\jetbrains.annotations\2018.3.0\lib\net20\JetBrains.Annotations.dll</HintPath>
-    </Reference>
-    <Reference Include="LinqFasterParallelSIMD">
-      <HintPath>C:\Users\Rick\.nuget\packages\linqfaster.simd.parallel\1.0.1\lib\net461\LinqFasterParallelSIMD.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Rick\.nuget\packages\newtonsoft.json\12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="Ninject">
-      <HintPath>C:\Users\Rick\.nuget\packages\ninject\3.3.4\lib\net45\Ninject.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog">
-      <HintPath>C:\Users\Rick\.nuget\packages\nlog\4.5.11\lib\net45\NLog.dll</HintPath>
-    </Reference>
-    <Reference Include="NLog.Windows.Forms">
-      <HintPath>C:\Users\Rick\.nuget\packages\nlog.windows.forms\4.2.3\lib\net35\NLog.Windows.Forms.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="RandomNameGeneratorLibrary">
-      <HintPath>C:\Users\Rick\.nuget\packages\randomnamegeneratorlibrary\1.2.2\lib\net40\RandomNameGeneratorLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Rationals">
-      <HintPath>C:\Users\Rick\.nuget\packages\rationals\1.3.3\lib\net47\Rationals.dll</HintPath>
-    </Reference>
-    <Reference Include="ReactiveUI">
-      <HintPath>C:\Users\Rick\.nuget\packages\reactiveui\9.11.3\lib\net461\ReactiveUI.dll</HintPath>
-    </Reference>
-    <Reference Include="ReactiveUI.Fody.Helpers">
-      <HintPath>C:\Users\Rick\.nuget\packages\reactiveui.fody\9.11.3\lib\net461\ReactiveUI.Fody.Helpers.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
@@ -183,10 +143,6 @@
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Speech" />
-    <Reference Include="System.Threading.Tasks.Dataflow, Version=4.6.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Rick\.nuget\packages\system.threading.tasks.dataflow\4.9.0\lib\netstandard2.0\System.Threading.Tasks.Dataflow.dll</HintPath>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -200,6 +156,7 @@
     <Compile Include="Collections\Queues\PriorityQueue.cs" />
     <Compile Include="Collections\Extensions\Shufflings.cs" />
     <Compile Include="Collections\StringTable.cs" />
+    <Compile Include="Controls\ConsoleWindow.cs" />
     <Compile Include="Database\MMF\Class1.cs" />
     <Compile Include="Database\Text.cs" />
     <Compile Include="Extensions\DisposableBase.cs" />
@@ -412,6 +369,7 @@
     <Compile Include="Security\Document.cs" />
     <Compile Include="Security\GpwData.cs" />
     <Compile Include="Security\PronounceablePasswordCreator.cs" />
+    <Compile Include="Threading\ThreadSafeEnumerable.cs" />
     <Compile Include="Threading\CPU.cs" />
     <Compile Include="Threading\EasierSemaphore.cs" />
     <Compile Include="Threading\GCNotification.cs" />
@@ -930,11 +888,6 @@
     <PackageReference Include="LinqFaster.SIMD.Parallel">
       <Version>1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="MemoryInterop.ILPatcher">
-      <Version>2.0.0</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>1.9.4</Version>
     </PackageReference>
@@ -945,7 +898,7 @@
       <Version>3.3.4</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.0</Version>
+      <Version>4.6.2</Version>
     </PackageReference>
     <PackageReference Include="NLog.Windows.Forms">
       <Version>4.2.3</Version>
@@ -992,7 +945,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
