--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -913,24 +913,6 @@
     <PackageReference Include="Rationals">
       <Version>1.3.3</Version>
     </PackageReference>
-    <PackageReference Include="ReactiveUI">
-      <Version>9.13.1</Version>
-    </PackageReference>
-    <PackageReference Include="ReactiveUI.Events.Winforms">
-      <Version>9.13.1</Version>
-    </PackageReference>
-    <PackageReference Include="ReactiveUI.Fody">
-      <Version>9.13.1</Version>
-    </PackageReference>
-    <PackageReference Include="ReactiveUI.WinForms">
-      <Version>9.13.1</Version>
-    </PackageReference>
-    <PackageReference Include="Rx-Core">
-      <Version>2.2.5</Version>
-    </PackageReference>
-    <PackageReference Include="Rx-Linq">
-      <Version>2.2.5</Version>
-    </PackageReference>
     <PackageReference Include="System.Linq">
       <Version>4.3.0</Version>
     </PackageReference>
@@ -958,7 +940,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
