--- a/Tests/app.config
+++ b/Tests/app.config
@@ -1,5 +1,5 @@
-﻿<configuration>
+<configuration>
   <runtime>
-    <gcAllowVeryLargeObjects enabled="true" />
+    <gcAllowVeryLargeObjects enabled="true"/>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
