--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Maths\Numbers\BiggerRational.cs" />
     <Compile Include="Maths\Numbers\PairOfDoubles.cs" />
     <Compile Include="Measurement\Currency\USD\SimpleWallet.cs" />
+    <Compile Include="Misc\FlowStatus.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileAttributeData.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileWatchingEvents.cs" />
     <Compile Include="OperatingSystem\FileSystem\FindEveryDocument.cs" />
@@ -883,12 +884,12 @@
       <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>5.0.6</Version>
+      <Version>5.1.1</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2019.1.1</Version>
+      <Version>2019.1.3</Version>
     </PackageReference>
     <PackageReference Include="LinqFaster.SIMD.Parallel">
       <Version>1.0.1</Version>
@@ -903,10 +904,10 @@
       <Version>3.3.4</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.3</Version>
+      <Version>4.6.5</Version>
     </PackageReference>
     <PackageReference Include="NLog.Windows.Forms">
-      <Version>4.2.3</Version>
+      <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="RandomNameGeneratorLibrary">
       <Version>1.2.2</Version>
@@ -924,7 +925,7 @@
       <Version>4.9.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
-      <Version>4.5.2</Version>
+      <Version>4.5.3</Version>
     </PackageReference>
     <PackageReference Include="System.Xml.XDocument">
       <Version>4.3.0</Version>
@@ -941,7 +942,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
