--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -128,6 +128,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.SqlServer.ForEachSMOEnumerator, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -161,6 +162,7 @@
     <Compile Include="ComputerSystem\ConsoleWindow.cs" />
     <Compile Include="Controls\ConsoleWindow.cs" />
     <Compile Include="Controls\FormExtensions.cs" />
+    <Compile Include="Database\ScriptDBObjects.cs" />
     <Compile Include="Database\DatabaseAsync.cs" />
     <Compile Include="Database\MMF\Class1.cs" />
     <Compile Include="Database\Text.cs" />
@@ -176,7 +178,7 @@
     <Compile Include="Maths\Numbers\BiggerRational.cs" />
     <Compile Include="Maths\Numbers\PairOfDoubles.cs" />
     <Compile Include="Measurement\Currency\USD\SimpleWallet.cs" />
-    <Compile Include="Misc\FlowStatus.cs" />
+    <Compile Include="Misc\Status.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileAttributeData.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileWatchingEvents.cs" />
     <Compile Include="OperatingSystem\FileSystem\FindEveryDocument.cs" />
@@ -286,7 +288,7 @@
     <Compile Include="Logging\InformationLevel.cs" />
     <Compile Include="Logging\Logging.cs" />
     <Compile Include="Logging\LoggingLevel.cs" />
-    <Compile Include="Logging\Targets.cs" />
+    <Compile Include="Logging\SomeTargets.cs" />
     <Compile Include="Maths\MicrosoftsRandom.cs" />
     <Compile Include="Maths\NonRandomSequence.cs" />
     <Compile Include="Maths\NumberExtensions.cs" />
@@ -377,6 +379,8 @@
     <Compile Include="Security\Document.cs" />
     <Compile Include="Security\GpwData.cs" />
     <Compile Include="Security\PronounceablePasswordCreator.cs" />
+    <Compile Include="Threading\NicerFormTimer.cs" />
+    <Compile Include="Threading\NicerSystemTimer.cs" />
     <Compile Include="Threading\ThreadSafeEnumerable.cs" />
     <Compile Include="Threading\CPU.cs" />
     <Compile Include="Threading\EasierSemaphore.cs" />
@@ -465,10 +469,8 @@
     <Compile Include="Collections\Lists\ImmutableList.cs" />
     <Compile Include="Collections\Extensions\ShufflingType.cs" />
     <Compile Include="Collections\Trees\TreeTraversalType.cs" />
-    <Compile Include="Collections\Extensions\CollectionDebugView.cs" />
     <Compile Include="Collections\Stacks\ConcurrentCollection.cs" />
     <Compile Include="Collections\Stacks\ConcurrentStackNoBlock.cs" />
-    <Compile Include="Collections\EnumerableToArrayBuffer.cs" />
     <Compile Include="Collections\ITreeNodeAware.cs" />
     <Compile Include="Collections\Queues\LockfreeQueue.cs" />
     <Compile Include="Collections\MultiKeyDictionary.cs" />
@@ -864,10 +866,10 @@
       <Version>2.6.0</Version>
     </PackageReference>
     <PackageReference Include="Costura.Fody">
-      <Version>4.0.0</Version>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Fody">
-      <Version>5.1.1</Version>
+      <Version>6.0.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -880,6 +882,9 @@
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>1.9.4</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects">
+      <Version>150.18147.0</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
     </PackageReference>
@@ -887,7 +892,7 @@
       <Version>3.3.4</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.6.6</Version>
+      <Version>4.6.7</Version>
     </PackageReference>
     <PackageReference Include="NLog.Windows.Forms">
       <Version>4.3.0</Version>
@@ -925,7 +930,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
