--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -87,7 +87,7 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Properties\favicon_mOB_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Libranian.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -174,11 +174,12 @@
     <Compile Include="Financial\Containers\Shopping\TaxableShoppingItem.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxTable.cs" />
     <Compile Include="Internet\InternetExtensions.cs" />
+    <Compile Include="Logging\IOptions.cs" />
     <Compile Include="Logging\Error.cs" />
     <Compile Include="Maths\Numbers\BiggerRational.cs" />
     <Compile Include="Maths\Numbers\PairOfDoubles.cs" />
     <Compile Include="Measurement\Currency\USD\SimpleWallet.cs" />
-    <Compile Include="Misc\Status.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileAttributeData.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileWatchingEvents.cs" />
     <Compile Include="OperatingSystem\FileSystem\FindEveryDocument.cs" />
@@ -835,6 +836,7 @@
     <Compile Include="Threading\FluentTimer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="FodyWeavers.xml">
       <SubType>Designer</SubType>
     </None>
@@ -876,8 +878,8 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
     </PackageReference>
-    <PackageReference Include="LinqFaster.SIMD.Parallel">
-      <Version>1.0.2</Version>
+    <PackageReference Include="LinqFaster.SIMD">
+      <Version>1.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Database.Collections.Generic">
       <Version>1.9.4</Version>
@@ -926,14 +928,14 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\favicon_mOB_icon.ico" />
+    <Content Include="Libranian.ico" />
     <Content Include="Properties\Libranian.ico" />
     <Content Include="Misc\brain.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
+      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
