--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -41,7 +41,7 @@
     <WarningsAsErrors>4014,1998,618,8073</WarningsAsErrors>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <DocumentationFile>
@@ -62,7 +62,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32Bit>false</Prefer32Bit>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <FileAlignment>512</FileAlignment>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -74,7 +74,7 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -87,7 +87,7 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Libranian.ico</ApplicationIcon>
+    <ApplicationIcon>Properties\Libranian.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -98,7 +98,7 @@
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <WarningsAsErrors>4014,1998,618,8073</WarningsAsErrors>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -109,7 +109,7 @@
     <DebugType>embedded</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -121,14 +121,13 @@
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <RunCodeAnalysis>true</RunCodeAnalysis>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Microsoft.SqlServer.ForEachSMOEnumerator, Version=15.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -168,7 +167,6 @@
     <Compile Include="Databases\Text.cs" />
     <Compile Include="Extensions\Class1.cs" />
     <Compile Include="Extensions\DisposableBase.cs" />
-    <Compile Include="Extensions\JunctionPoint.cs" />
     <Compile Include="Extensions\RegistryServer.cs" />
     <Compile Include="Financial\Containers\Shopping\ItemCategory.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxableShoppingItem.cs" />
@@ -180,6 +178,7 @@
     <Compile Include="Maths\Numbers\BiggerRational.cs" />
     <Compile Include="Maths\Numbers\PairOfDoubles.cs" />
     <Compile Include="Measurement\Currency\USD\SimpleWallet.cs" />
+    <Compile Include="OperatingSystem\FileSystem\PathTypeAttributes.cs" />
     <Compile Include="Status.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileAttributeData.cs" />
     <Compile Include="OperatingSystem\FileSystem\FileWatchingEvents.cs" />
@@ -342,7 +341,7 @@
     <Compile Include="Parsing\Validation\StringNum.cs" />
     <Compile Include="Exceptions\InvalidFormatException.cs" />
     <Compile Include="Parsing\TrimmedString.cs" />
-    <Compile Include="Parsing\Validation\IStringValidator.cs" />
+    <Compile Include="Parsing\Validation\IValidator.cs" />
     <Compile Include="Parsing\Validation\IValidatedString.cs" />
     <Compile Include="Parsing\Validation\NonEmptyString.cs" />
     <Compile Include="Parsing\Validation\RegexString.cs" />
@@ -351,13 +350,6 @@
     <Compile Include="Parsing\Validation\StringEmail.cs" />
     <Compile Include="Parsing\Validation\StringHex.cs" />
     <Compile Include="Parsing\Validation\StringHexPrefix.cs" />
-    <Compile Include="Parsing\Validation\StringNN.cs" />
-    <Compile Include="Parsing\Validation\StringN_.cs" />
-    <Compile Include="Parsing\Validation\StringWhitelist.cs" />
-    <Compile Include="Parsing\Validation\StringWhitelistNN.cs" />
-    <Compile Include="Parsing\Validation\StringWhitelistN_.cs" />
-    <Compile Include="Parsing\Validation\StringWhitelist_N.cs" />
-    <Compile Include="Parsing\Validation\String_N.cs" />
     <Compile Include="Parsing\Validation\ValidatedString.cs" />
     <Compile Include="Parsing\Validation\ValidatedStringJsonNetConverter.cs" />
     <Compile Include="Persistence\Cache.cs" />
@@ -871,6 +863,9 @@
     <PackageReference Include="Costura.Fody">
       <Version>4.1.0</Version>
     </PackageReference>
+    <PackageReference Include="CsvHelper">
+      <Version>12.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -886,7 +881,7 @@
       <Version>1.9.4</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects">
-      <Version>150.18147.0</Version>
+      <Version>150.18178.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.2</Version>
@@ -929,7 +924,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Libranian.ico" />
     <Content Include="Properties\Libranian.ico" />
     <Content Include="Misc\brain.js" />
   </ItemGroup>
