--- a/Tests/LibrainianTests.csproj
+++ b/Tests/LibrainianTests.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityTests.cs" />
     <Compile Include="TimeSystemTimersTests.cs" />
+    <Compile Include="UsableSemaphoreThrottleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -101,8 +102,8 @@
     <PackageReference Include="JetBrains.Annotations">
       <Version>2019.1.3</Version>
     </PackageReference>
-    <PackageReference Include="NUnit">
-      <Version>3.12.0</Version>
+    <PackageReference Include="xunit">
+      <Version>2.4.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
