--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -167,18 +167,18 @@
     <Compile Include="Controls\ConsoleWindow.cs" />
     <Compile Include="Controls\FormExtensions.cs" />
     <Compile Include="Databases\ScriptDBObjects.cs" />
-    <Compile Include="Databases\DatabaseAsync.cs" />
-    <Compile Include="Databases\MMF\Class1.cs" />
+    <Compile Include="Databases\AsyncDatabaseServer.cs" />
     <Compile Include="Databases\SqlServer.cs" />
     <Compile Include="Databases\Text.cs" />
     <Compile Include="Exceptions\NotInitializedException.cs" />
-    <Compile Include="Extensions\Class1.cs" />
+    <Compile Include="Extensions\Error.cs" />
     <Compile Include="Extensions\DisposableBase.cs" />
     <Compile Include="Extensions\RegistryServer.cs" />
     <Compile Include="Financial\Containers\Shopping\ItemCategory.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxableShoppingItem.cs" />
     <Compile Include="Financial\Containers\Shopping\TaxTable.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="Internet\EmailClass.cs" />
     <Compile Include="Internet\InternetExtensions.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Logging\IOptions.cs" />
@@ -524,7 +524,6 @@
     <Compile Include="Databases\MMF\SerializerException.cs" />
     <Compile Include="Databases\MMF\ValueTypeCheck.cs" />
     <Compile Include="Databases\DatabaseExtensions.cs" />
-    <Compile Include="Databases\Database.cs" />
     <Compile Include="Extensions\BigNullStream.cs" />
     <Compile Include="Extensions\BooleanPredicateBuilder.cs" />
     <Compile Include="Extensions\ReflectionHelper.cs" />
@@ -882,7 +881,7 @@
       <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="CsvHelper">
-      <Version>12.1.2</Version>
+      <Version>12.1.3</Version>
     </PackageReference>
     <PackageReference Include="Fody">
       <Version>6.0.2</Version>
@@ -945,7 +944,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_UseUniversalClock="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_StartDate="2000/1/1" />
+      <UserProperties BuildVersion_StartDate="2000/1/1" BuildVersion_BuildVersioningStyle="YearStamp.MonthStamp.DayStamp.Increment" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_UseUniversalClock="True" />
     </VisualStudio>
   </ProjectExtensions>
 </Project>
