--- a/Librainian/.editorconfig
+++ b/Librainian/.editorconfig
@@ -2,3 +2,4 @@
 
 # HAA0101: Array allocation for params parameter
 dotnet_diagnostic.HAA0101.severity = suggestion
+dotnet_code_quality.ca1000.api_surface = private, internal
