--- a/Librainian/Librainian.csproj
+++ b/Librainian/Librainian.csproj
@@ -54,7 +54,7 @@
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <NoWarn>IDE0015,IDE0044;IDE1006</NoWarn>
     <FileAlignment>512</FileAlignment>
-    <CodeAnalysisRuleSet>Librainian.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>BasicCorrectnessRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>embedded</DebugType>
