--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,4 @@
 ﻿[*.cs]
 
-# IDE0034: Simplify 'default' expression
-csharp_prefer_simple_default_expression = false
+# IDE0055: Fix formatting
+dotnet_diagnostic.IDE0055.severity = error
